--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -19,6 +19,9 @@
             [src]="article.urlToImage || 'assets/placeholder.jpg'" 
             [alt]="article.title"
             class="news-card__image"
+            width="600"
+            height="400"
+            loading="lazy"
           />
         </div>
         
