--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -162,6 +162,7 @@
   color: #4b5563;
   margin: 0 0 1rem 0;
   display: -webkit-box;
+  line-clamp: 3;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
